fix: improve footer layout and alignment; enhance container styles for better presentation

--- a/public/css/base.css
+++ b/public/css/base.css
@@ -17,8 +17,16 @@ h1 {
 }
 
 footer {
+    width: 100%;
+    margin: 0 auto;    
     color: black;
     font-size: 0.8rem;
+    text-align: left;
+    padding: 10px;
+}
+
+footer-content {
+    text-align: left;
 }
 
 #show-selector {
@@ -94,9 +102,11 @@ h1.bg-secondary {
     border-color: #6c757d;
 }
 
-.container {
-    max-width: 80%;
-    height: auto;
+.container,
+.login-container,
+.main-content {
+    width: 80%;
+    max-width: 1200px;
     margin: 0 auto;
     padding: 20px;
 }
@@ -276,6 +286,10 @@ h1.bg-secondary {
     transition: all 0.3s ease;
     text-align: center;
 }
+.print-container {
+    text-align: center;
+    margin-bottom: 0;
+}
 
 #exhibitor-button {
     background-color: #64999b;
@@ -334,4 +348,24 @@ html {
 
 #login {
     margin-bottom: 100px;
+}
+
+body {
+    color: black;
+}
+
+header {
+    text-align: center;
+}
+
+h4 {
+    color: black;
+}
+.lineup-container {
+    display: inline-block;
+    text-align: left;
+    margin-bottom: 15px;
+}
+.checkbox-group {
+    margin-left: 20px;
 }
